Skeleton for BMS, Datastore, CAN

--- a/VehicleControlUnit/VehicleControlUnit.ioc
+++ b/VehicleControlUnit/VehicleControlUnit.ioc
@@ -6,8 +6,9 @@ CAN.BS1=CAN_BS1_2TQ
 CAN.CalculateBaudRate=500000
 CAN.CalculateTimeBit=2000
 CAN.CalculateTimeQuantum=500.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler,TXFP
 CAN.Prescaler=16
+CAN.TXFP=DISABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -131,8 +132,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=CAN Read.ioc
-ProjectManager.ProjectName=CAN Read
+ProjectManager.ProjectFileName=VehicleControlUnit.ioc
+ProjectManager.ProjectName=VehicleControlUnit
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -172,4 +173,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F103RB
 boardIOC=true
-isbadioc=true
+isbadioc=false
