--- a/VehicleControlUnit/VehicleControlUnit.ioc
+++ b/VehicleControlUnit/VehicleControlUnit.ioc
@@ -6,9 +6,9 @@ CAN.BS1=CAN_BS1_2TQ
 CAN.CalculateBaudRate=500000
 CAN.CalculateTimeBit=2000
 CAN.CalculateTimeQuantum=500.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler,TXFP
-CAN.Prescaler=16
-CAN.TXFP=DISABLE
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,NART,BS1,Mode
+CAN.Mode=CAN_MODE_NORMAL
+CAN.NART=DISABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -55,8 +55,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA11.Locked=true
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN_RX
+PA12.Locked=true
 PA12.Mode=CAN_Activate
 PA12.Signal=CAN_TX
 PA13.GPIOParameters=GPIO_Label
