--- a/VCU-H745ZI-Q/VCU-H745ZI-Q.ioc
+++ b/VCU-H745ZI-Q/VCU-H745ZI-Q.ioc
@@ -52,7 +52,7 @@ FDCAN1.CalculateTimeBitNominal=2000
 FDCAN1.CalculateTimeQuantumNominal=400.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,Mode,NominalPrescaler,RxFifo1ElmtsNbr,MessageRAMOffset,StdFiltersNbr
 FDCAN1.MessageRAMOffset=0x214
-FDCAN1.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
+FDCAN1.Mode=FDCAN_MODE_NORMAL
 FDCAN1.NominalPrescaler=20
 FDCAN1.RxFifo0ElmtsNbr=16
 FDCAN1.RxFifo1ElmtsNbr=16
@@ -64,12 +64,12 @@ FDCAN2.CalculateTimeBitNominal=2000
 FDCAN2.CalculateTimeQuantumNominal=400.0
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,AutoRetransmission,RxFifo1ElmtsNbr,MessageRAMOffset,TxFifoQueueMode,ProtocolException,NominalPrescaler,Mode,StdFiltersNbr
 FDCAN2.MessageRAMOffset=0x214
-FDCAN2.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
+FDCAN2.Mode=FDCAN_MODE_NORMAL
 FDCAN2.NominalPrescaler=20
 FDCAN2.ProtocolException=DISABLE
 FDCAN2.RxFifo0ElmtsNbr=16
 FDCAN2.RxFifo1ElmtsNbr=16
-FDCAN2.StdFiltersNbr=0
+FDCAN2.StdFiltersNbr=1
 FDCAN2.TxFifoQueueElmtsNbr=16
 FDCAN2.TxFifoQueueMode=FDCAN_TX_FIFO_OPERATION
 File.Version=6
