change can to polling mode

--- a/VCU-H745ZI-Q/VCU-H745ZI-Q.ioc
+++ b/VCU-H745ZI-Q/VCU-H745ZI-Q.ioc
@@ -52,7 +52,7 @@ FDCAN1.CalculateTimeBitNominal=2000
 FDCAN1.CalculateTimeQuantumNominal=400.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,Mode,NominalPrescaler,RxFifo1ElmtsNbr,MessageRAMOffset,StdFiltersNbr
 FDCAN1.MessageRAMOffset=0x214
-FDCAN1.Mode=FDCAN_MODE_NORMAL
+FDCAN1.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
 FDCAN1.NominalPrescaler=20
 FDCAN1.RxFifo0ElmtsNbr=16
 FDCAN1.RxFifo1ElmtsNbr=16
@@ -64,7 +64,7 @@ FDCAN2.CalculateTimeBitNominal=2000
 FDCAN2.CalculateTimeQuantumNominal=400.0
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,AutoRetransmission,RxFifo1ElmtsNbr,MessageRAMOffset,TxFifoQueueMode,ProtocolException,NominalPrescaler,Mode,StdFiltersNbr
 FDCAN2.MessageRAMOffset=0x214
-FDCAN2.Mode=FDCAN_MODE_NORMAL
+FDCAN2.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
 FDCAN2.NominalPrescaler=20
 FDCAN2.ProtocolException=DISABLE
 FDCAN2.RxFifo0ElmtsNbr=16
@@ -106,10 +106,6 @@ MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC1.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC1.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC1.FDCAN2_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC1.FDCAN2_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC1.ForceEnableDMAVector=false
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
