--- a/VCU-H745ZI-Q/VCU-H745ZI-Q.ioc
+++ b/VCU-H745ZI-Q/VCU-H745ZI-Q.ioc
@@ -49,11 +49,18 @@ Dma.Request0=ADC1
 Dma.RequestsNb=1
 FDCAN1.CalculateBaudRateNominal=500000
 FDCAN1.CalculateTimeBitNominal=2000
-FDCAN1.CalculateTimeQuantumNominal=400.0
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,Mode,NominalPrescaler,RxFifo1ElmtsNbr,MessageRAMOffset,StdFiltersNbr
-FDCAN1.MessageRAMOffset=0x214
-FDCAN1.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
-FDCAN1.NominalPrescaler=20
+FDCAN1.CalculateTimeQuantumNominal=20.0
+FDCAN1.DataPrescaler=25
+FDCAN1.DataSyncJumpWidth=1
+FDCAN1.DataTimeSeg1=2
+FDCAN1.DataTimeSeg2=1
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,Mode,NominalPrescaler,RxFifo1ElmtsNbr,MessageRAMOffset,StdFiltersNbr,NominalTimeSeg1,NominalTimeSeg2,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2
+FDCAN1.MessageRAMOffset=0
+FDCAN1.Mode=FDCAN_MODE_EXTERNAL_LOOPBACK
+FDCAN1.NominalPrescaler=1
+FDCAN1.NominalSyncJumpWidth=13
+FDCAN1.NominalTimeSeg1=86
+FDCAN1.NominalTimeSeg2=13
 FDCAN1.RxFifo0ElmtsNbr=16
 FDCAN1.RxFifo1ElmtsNbr=16
 FDCAN1.StdFiltersNbr=1
@@ -61,11 +68,18 @@ FDCAN1.TxFifoQueueElmtsNbr=16
 FDCAN2.AutoRetransmission=DISABLE
 FDCAN2.CalculateBaudRateNominal=500000
 FDCAN2.CalculateTimeBitNominal=2000
-FDCAN2.CalculateTimeQuantumNominal=400.0
-FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,AutoRetransmission,RxFifo1ElmtsNbr,MessageRAMOffset,TxFifoQueueMode,ProtocolException,NominalPrescaler,Mode,StdFiltersNbr
+FDCAN2.CalculateTimeQuantumNominal=20.0
+FDCAN2.DataPrescaler=25
+FDCAN2.DataSyncJumpWidth=1
+FDCAN2.DataTimeSeg1=2
+FDCAN2.DataTimeSeg2=1
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,RxFifo0ElmtsNbr,AutoRetransmission,RxFifo1ElmtsNbr,MessageRAMOffset,TxFifoQueueMode,ProtocolException,NominalPrescaler,Mode,StdFiltersNbr,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,NominalTimeSeg1,NominalTimeSeg2
 FDCAN2.MessageRAMOffset=0x214
-FDCAN2.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
-FDCAN2.NominalPrescaler=20
+FDCAN2.Mode=FDCAN_MODE_EXTERNAL_LOOPBACK
+FDCAN2.NominalPrescaler=1
+FDCAN2.NominalSyncJumpWidth=13
+FDCAN2.NominalTimeSeg1=86
+FDCAN2.NominalTimeSeg2=13
 FDCAN2.ProtocolException=DISABLE
 FDCAN2.RxFifo0ElmtsNbr=16
 FDCAN2.RxFifo1ElmtsNbr=16
