--- a/VehicleControlUnit/VehicleControlUnit.ioc
+++ b/VehicleControlUnit/VehicleControlUnit.ioc
@@ -21,7 +21,7 @@ CAN.CalculateBaudRate=500000
 CAN.CalculateTimeBit=2000
 CAN.CalculateTimeQuantum=500.0
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,NART,BS1,Mode
-CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Mode=CAN_MODE_NORMAL
 CAN.NART=DISABLE
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
