--- a/VehicleControlUnit/VehicleControlUnit.ioc
+++ b/VehicleControlUnit/VehicleControlUnit.ioc
@@ -35,7 +35,7 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
+GPIO.groupedBy=Expand Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103RBT6
 Mcu.Family=STM32F1
@@ -52,12 +52,14 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin11=PC7
+Mcu.Pin12=PA9
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -66,7 +68,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=17
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -127,6 +129,8 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -140,6 +144,10 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC7.GPIOParameters=GPIO_PuPd
+PC7.GPIO_PuPd=GPIO_PULLUP
+PC7.Locked=true
+PC7.Signal=GPIO_Input
 PD0-OSC_IN.Locked=true
 PD0-OSC_IN.Mode=HSE-External-Clock-Source
 PD0-OSC_IN.Signal=RCC_OSC_IN
