--- a/VehicleControlUnit/VehicleControlUnit.ioc
+++ b/VehicleControlUnit/VehicleControlUnit.ioc
@@ -2,22 +2,16 @@
 ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-14\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.Channel-16\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-17\#ChannelRegularConversion=ADC_CHANNEL_7
 ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,ContinuousConvMode,master,Rank-16\#ChannelRegularConversion,Channel-16\#ChannelRegularConversion,SamplingTime-16\#ChannelRegularConversion,Rank-17\#ChannelRegularConversion,Channel-17\#ChannelRegularConversion,SamplingTime-17\#ChannelRegularConversion
-ADC1.NbrOfConversion=5
+ADC1.IPParameters=Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,ContinuousConvMode,master
+ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-12\#ChannelRegularConversion=1
 ADC1.Rank-13\#ChannelRegularConversion=2
 ADC1.Rank-14\#ChannelRegularConversion=3
-ADC1.Rank-16\#ChannelRegularConversion=4
-ADC1.Rank-17\#ChannelRegularConversion=5
 ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_55CYCLES_5
 ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_55CYCLES_5
 ADC1.SamplingTime-14\#ChannelRegularConversion=ADC_SAMPLETIME_55CYCLES_5
-ADC1.SamplingTime-16\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-17\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -58,17 +52,15 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC7
-Mcu.Pin14=PA9
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin11=PC7
+Mcu.Pin12=PA9
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -76,7 +68,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=21
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -137,8 +129,6 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.Signal=ADCx_IN6
-PA7.Signal=ADCx_IN7
 PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB3.Locked=true
@@ -225,10 +215,6 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
-SH.ADCx_IN6.0=ADC1_IN6,IN6
-SH.ADCx_IN6.ConfNb=1
-SH.ADCx_IN7.0=ADC1_IN7,IN7
-SH.ADCx_IN7.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode
